Bug do DOM resolvido, ajuste no alinhamento do grid de produtos, Nova feature - [Adicionar verificação de email válido + collapse nos produtos]

--- a/src/css/mainstyle.css
+++ b/src/css/mainstyle.css
@@ -20,18 +20,18 @@
         transform: skewY(-18deg) !important;
     }
 
-    .title-sct-1{
+    .title-header-1{
         margin: 66px 0px 0px 0px !important;
         text-align: left !important;
         font-weight: normal;
     }
 
-    .title-sct-2{
+    .title-header-2{
         margin-bottom: 9px !important;
         text-align: left;
     }
 
-    .subtitle-sct-1{
+    .subtitle-header-1{
         text-align: left;
         width: 360px !important;
         margin: 0px 0px 56px 0px !important;
@@ -59,11 +59,11 @@
     }
 
 
-    .title-sct2-1{
+    .title-form-1{
         margin: 29px 0px 17px 16px !important;
     }
     
-    .paragraph-sct2-1{
+    .paragraph-form-1{
         margin: 0px 0px 30px 16px !important;
         width: 386px !important;
     }
@@ -72,7 +72,7 @@
         margin: 0px 0px 91px 16px !important;
     }
 
-    .input-sct2-control{
+    .input-form-control{
         width: 385px !important;
     }
 
@@ -139,6 +139,8 @@
         cursor: pointer;
         text-align: center;
         font-size: 16px;
+        font-family: Helvetica, Arial, sans-serif;
+        font-weight: 400;
     }
 
     .collapsible:nth-child(n+5){
@@ -151,7 +153,7 @@
         margin-bottom: 28px !important;
     }
 
-    .paragraph-sect4{
+    .paragraph-newsletter{
         margin: 0px 20px 28px 17px !important;
         line-height: 16px;
         width: 386px !important;
@@ -186,15 +188,15 @@
         margin-top: -13% !important;
     } 
 
-    .title-sct-1{
+    .title-header-1{
         margin: 31px 0px 5px 0px !important;
     }
 
-    .title-sct-2{
+    .title-header-2{
         margin-bottom: 9px !important;
     }
 
-    .subtitle-sct-1{
+    .subtitle-header-1{
         text-align: center !important;
         width: 360px !important;
         margin: auto;
@@ -211,11 +213,11 @@
 
     
 
-    .title-sct2-1{
+    .title-form-1{
         display: none !important;
     }
 
-    .paragraph-sct2-1{
+    .paragraph-form-1{
         display: none !important;
     }
 
@@ -274,6 +276,8 @@
         cursor: pointer;
         text-align: center;
         font-size: 16px;
+        font-family: Helvetica, Arial, sans-serif;
+        font-weight: 400;
     }
 
     .collapsible {
@@ -318,20 +322,26 @@
 }
 
 
-.title-sct-1{
+.title-header-1{
     font-size: 20px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #ffffff;
     margin: 69px 0px 0px 0px;
 }
 
-.title-sct-2{
+.title-header-2{
     font-size: 40px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
     color: #ffffff;
 }
 
-.subtitle-sct-1{
+.subtitle-header-1{
     margin: 24px 0px 50px 0px;
     font-size: 14px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #ffffff;
 }
 
@@ -349,6 +359,7 @@
 
 .btn-guide{
     display: inline-block;
+    font-family: Helvetica, Arial, sans-serif;
     font-weight: normal;
     line-height: 1.5;
     color: #888888;
@@ -369,14 +380,18 @@
 
 /* Section 2 - Form */
 
-.title-sct2-1{
+.title-form-1{
     margin: 20px 0px 30px 0px;
     font-size: 20px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #888888;
 }
 
-.paragraph-sct2-1{
+.paragraph-form-1{
     font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #888888;
 }
 
@@ -385,11 +400,12 @@
     margin-left: 60px;
 }
 
-.input-sct2-control{
+.input-form-control{
     display: block;
     width: 340px;
     height: 30px;
     padding: .375rem .75rem;
+    font-family: Helvetica, Arial, sans-serif;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -397,9 +413,11 @@
     border-radius: 0px;
 }
 
-.label-sct2-control{
+.label-form-control{
     margin: 20px 0px 7px 0px;
     font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #707070;
 }
 
@@ -407,17 +425,20 @@
     margin: 20px 40px 23px 0px;
 }
 
-.input-sct2-radio{
+.input-form-radio{
 
 }
 
-.label-sct2-radio{
+.label-form-radio{
     font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #707070;
 }
 .btn-send{
     display: inline-block;
-    font-weight: normal;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     line-height: 1.5;
     color: #888888;
     text-align: center;
@@ -460,7 +481,9 @@
 }
 
 .title-line-half{
-    font-size: 18px; 
+    font-size: 18px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold; 
     color: #888888;
     position:relative; 
     padding:10px;
@@ -474,23 +497,25 @@
     margin-top: 50px;
 }
 
-
-
 .box-product{
-   margin: 0px 0px 39px 0px;
+    margin: 0px 0px 39px 99px;
+    width: 200px !important;
 }
 
-
+.box-product:nth-child(1 + 4n){
+    margin: 0px 0px 39px 99px;
+    width: 200px !important;
+}
 
 .img-product{
-    border: 1px solid #707070;
     width: 200px;
-    height: 150px;
 }
 
 .name-product{
     margin: 14px 0px 10px 0px;
     font-size: 14px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #888888;
 }
 
@@ -498,25 +523,32 @@
     width: 200px;
     line-height: 16px;
     font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #888888;
 
 }
 
 .previous-value-product{
     font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #888888;
     margin-bottom: 6px;
 }
 
 .later-value-product{
     font-size: 16px;
-    color: #888888;
+    font-family: Helvetica, Arial, sans-serif;
     font-weight: bold;
+    color: #888888;
     margin-bottom: 7px;
 }
 
 .credit-value-product{
     font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     color: #888888;
     margin-bottom: 10px;
 }
@@ -527,6 +559,8 @@
     background-color: #ffffff;
     color: #888888;
     font-size: 16px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     height: 30px;
     width: 200px;
 }
@@ -537,6 +571,8 @@
     background-color: #ffffff;
     color: #888888;
     font-size: 16px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     height: 39px;
     width: 260px;
     margin-bottom: 128px;
@@ -558,9 +594,11 @@
 }
 
 
-.paragraph-sect4{
+.paragraph-newsletter{
     color: #888888;
     font-size: 14px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     margin-bottom: 39px;
     text-align: center;
 }
@@ -568,6 +606,8 @@
 .label-newsletter{
     color: #888888;
     font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     margin-bottom: 7px;
 }
 
@@ -583,6 +623,8 @@
     background-color: #ffffff;
     color: #888888;
     font-size: 16px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     height: 39px;
     width: 260px;
     margin:50px 0px 71px 0px;
@@ -593,6 +635,8 @@
 .footer-phrase{
     color: #ffffff;
     font-size: 12px;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 400;
     line-height: 18px;
     margin: 90px 0px 86px 0px;
     text-align: center;
@@ -608,13 +652,7 @@
     background-color: #707070;
 }
 
-.diagonal-box-footer::before{ /*Pseudoclasse para estilização diagonal, superhero - Camada inferior*/
-    /*content: '';
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height:  293px;
-    clip-path: polygon(0% 0%, 100% 50px, 100% 100%, 0% calc(100% - 50px));*/
+.diagonal-box-footer::before{ 
     background-color: #707070;
     content: '';
     display: block;
